fixing products alingment on mobile and title, creating readme

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ main h1 strong{
     justify-content: center;
   }
 
-  .products-component{
+  .products-component, .products-container{
     flex-direction: column;
     align-items: center;
     justify-content: center;
